Make sure wrapped-footer has an height

--- a/rando/static/css/style.less
+++ b/rando/static/css/style.less
@@ -421,6 +421,7 @@ ul.social-buttons li {
   .wrapper {
     float: left;
     width: 95%;
+    height: 100%;
   }
 }
 
